# hanspell-hs

./: .gitignore  .memento-mori  .travis.yml  CHANGELOG.md  README.md  hanspell.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Hanspell.hs
src/Hanspell/: DaumSpellChecker.hs  Decoder.hs  Glob.hs  PnuSpellChecker.hs  TextLines.hs  Typo.hs
src/Language/: Hanspell.hs
src/Language/Hanspell/: DaumSpellChecker.hs  Decoder.hs  Glob.hs  NaverSpellChecker.hs  PnuSpellChecker.hs  TextLines.hs  Typo.hs
test/: DaumSpellCheckerSpec.hs  HanspellExample.hs  NaverSpellCheckerSpec.hs  PnuSpellCheckerSpec.hs  Spec.hs  TextLinesSpec.hs  TypoSpec.hs  cli-test.err.all  cli-test.err.daum  cli-test.sh  long-paragraph-sample.txt  sample.utf-8.txt  test-all.sh  update-cli-test.sh
