cabal-version:      2.4
name:               hanspell
version:            1.0.0
synopsis:           Korean spell checker
description:        @hanspell@ — 다음과 네이버 맞춤법 검사 웹 서비스를
                    이용한 한국어 맞춤법 검사기. 명령행 도구와
                    @Language.Hanspell@ 라이브러리를 제공합니다.
homepage:           https://github.com/9beach/hanspell-hs
bug-reports:        https://github.com/9beach/hanspell-hs/issues
license:            MIT
license-file:       LICENSE
author:             Hyunrae Cho
maintainer:         9beach@gmail.com
copyright:          (c) 2020-2026 Hyunrae Cho
category:           Language
build-type:         Simple
extra-source-files: README.md
                    CHANGELOG.md
                    test/long-paragraph-sample.txt

source-repository head
    type:     git
    location: https://github.com/9beach/hanspell-hs

common warnings
    ghc-options: -Wall
                 -Wno-name-shadowing
                 -Wno-unused-imports
                 -Wno-unused-matches
                 -Wno-incomplete-patterns
                 -Wno-incomplete-uni-patterns

library
    import:           warnings
    exposed-modules:  Language.Hanspell
                      Language.Hanspell.Typo
                      Language.Hanspell.NaverSpellChecker
                      Language.Hanspell.DaumSpellChecker
                      Language.Hanspell.Glob
                      Language.Hanspell.TextLines
    other-modules:    Language.Hanspell.Decoder
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base               >= 4.13   && < 5
                    , aeson              >= 2.0    && < 2.3
                    , bytestring         >= 0.10   && < 0.13
                    , text               >= 1.2    && < 2.2
                    , transformers       >= 0.5    && < 0.7
                    , html-entities      >= 1.1    && < 2
                    , http-client        >= 0.7    && < 0.8
                    , http-client-tls    >= 0.3    && < 0.4
                    , http-types         >= 0.12   && < 0.14
                    , regex-tdfa         >= 1.3    && < 1.4
                    , split              >= 0.2    && < 0.3
                    , utf8-string        >= 1.0    && < 1.1

executable hanspell
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base
                    , hanspell
                    , directory          >= 1.3 && < 1.4
                    , unix               >= 2.7 && < 2.9

test-suite hanspell-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:    TypoSpec
                      TextLinesSpec
                      DaumSpellCheckerSpec
                      NaverSpellCheckerSpec
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base
                    , hanspell
                    , hspec              >= 2     && < 3
                    , QuickCheck         >= 2.10  && < 3
                    , transformers
                    , split
                    , async
                    , text
